# cmod

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  plan.md  todo.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
blog/: 01-introducing-cmod.md  02-why-cpp-needs-a-modern-package-manager.md  03-cmod-vs-existing-tools.md  04-getting-started-with-cmod.md  05-supply-chain-security-for-cpp.md  06-landing-page.md  07-social-media-snippets.md  08-git-as-registry.md  09-building-cmod-in-rust.md  10-deterministic-builds-matter.md  11-cpp-modules-explained.md  12-understanding-cmod-cache.md  13-workspace-monorepo-patterns.md  14-migrating-cmake-to-cmod.md  15-cmod-and-ai-assisted-development.md  README.md
crates/cmod-build/: Cargo.toml
crates/cmod-build/src/: compiler.rs  distributed.rs  graph.rs  incremental.rs  lib.rs  plan.rs  runner.rs
crates/cmod-cache/: Cargo.toml
crates/cmod-cache/src/: bmi.rs  cache.rs  distribution.rs  key.rs  lib.rs  remote.rs
crates/cmod-cli/: Cargo.toml
crates/cmod-cli/src/: main.rs
crates/cmod-cli/src/commands/: add.rs  audit.rs  build.rs  cache.rs  check.rs  clean.rs  compile_commands.rs  deps.rs  explain.rs  fmt.rs  graph.rs  init.rs  lint.rs  mod.rs  plugin.rs  plugin_sandbox.rs  publish.rs  remove.rs  resolve.rs  run.rs  sbom.rs  search.rs  status.rs  test.rs  tidy.rs  toolchain.rs  update.rs  util.rs  vendor.rs  verify.rs  workspace.rs
crates/cmod-cli/tests/: cli_integration.rs  e2e_validation.rs  example_projects.rs  real_projects.rs
crates/cmod-core/: Cargo.toml
crates/cmod-core/src/: config.rs  error.rs  lib.rs  lockfile.rs  manifest.rs  shell.rs  types.rs
crates/cmod-lsp/: Cargo.toml
crates/cmod-lsp/src/: completion.rs  diagnostics.rs  lib.rs  server.rs
crates/cmod-resolver/: Cargo.toml
crates/cmod-resolver/src/: conditional.rs  features.rs  git.rs  lib.rs  registry.rs  resolver.rs  version.rs
crates/cmod-security/: Cargo.toml
crates/cmod-security/src/: audit.rs  hash.rs  lib.rs  policy.rs  sbom.rs  signing.rs  trust.rs  verify.rs
crates/cmod-workspace/: Cargo.toml
crates/cmod-workspace/src/: lib.rs  workspace.rs
docs/: cmod_architecture_diagram.md  cmod_cli_ux_command_specification.md  cmod_implementation_roadmap.md  cmod_readme_vision.md  cmod_reference_implementation_skeleton.md  cmod_vs_existing_tools.md  why_cmod_exists_pitch_doc.md
docs/guide/: README.md  building.md  caching.md  cli-reference.md  configuration.md  dependencies.md  examples.md  getting-started.md  modules.md  publishing.md  security.md  testing.md  toolchains.md  workspaces.md
docs/rfc/: rfc_0001_cargo_style_c_modules_tooling_llvm_based.md  rfc_0002_module_identity_import_rules.md  rfc_0003_lockfile_reproducible_builds.md  rfc_0004_build_plan_ir_module_graph_execution.md  rfc_0005_cache_artifact_model.md  rfc_0006_versioning_compatibility_lockfiles.md  rfc_0007_build_graph_incremental_compilation_caching.md  rfc_0008_toolchains_targets_cross_compilation.md  rfc_0009_security_trust_supply_chain.md  rfc_0010_ide_integration_developer_experience.md  rfc_0011_precompiled_module_distribution.md  rfc_0012_advanced_build_strategies_performance_optimizations.md  rfc_0013_distributed_builds_remote_execution.md  rfc_0014_module_graph_visualization_developer_tools_enhancements.md  rfc_0015_cmod_ecosystem_governance_community_standards.md  rfc_0016_lsp_enhancements_advanced_ide_features.md  rfc_0017_module_metadata_extensions_advanced_dependency_features.md  rfc_0018_tooling_plugins_ecosystem_utilities.md  rfc_0019_workspaces_monorepos_multi_module_projects.md  rfc_0020_lockfiles_reproducible_builds.md  rfc_0021_binary_artifacts_distributed_build_caches.md  rfc_0022_security_signing_supply_chain_integrity.md  rfc_implementation_phases.md  rfc_unified_cmod_schema.md
examples/: README.md
examples/hello/: README.md  cmod.toml
examples/hello/src/: hello.cpp  lib.cppm  main.cpp
examples/llvm-demangle/: .gitignore  README.md  cmod.toml
examples/llvm-demangle/include/llvm/Config/: llvm-config.h
examples/llvm-demangle/src/: itanium.cppm  lib.cppm  main.cpp  microsoft.cppm  rust_dlang.cppm
examples/path-deps/: README.md  cmod.toml
examples/path-deps/libs/colors/: cmod.toml
examples/path-deps/libs/colors/src/: lib.cppm
examples/path-deps/libs/geometry/: cmod.toml
examples/path-deps/libs/geometry/src/: geometry.cpp  lib.cppm  vec2.cppm
examples/path-deps/src/: main.cpp
examples/with-deps/: README.md  cmod.toml
examples/with-deps/src/: lib.cppm  main.cpp
examples/with-tests/: cmod.toml
examples/with-tests/src/: lib.cppm  main.cpp
examples/with-tests/tests/: test_basic.cpp  test_math.cpp
examples/workspace/: README.md  cmod.toml
examples/workspace/app/: cmod.toml
examples/workspace/app/src/: app.cpp  lib.cppm  main.cpp
examples/workspace/core/: cmod.toml
examples/workspace/core/src/: core.cpp  lib.cppm
examples/workspace/utils/: cmod.toml
examples/workspace/utils/src/: lib.cppm  utils.cpp
website/: blog.html  docs.html  getting-started.html  index.html
website/blog/: 06-git-as-registry.html  07-building-cmod-in-rust.html  08-deterministic-builds-matter.html  09-cpp-modules-explained.html  10-understanding-cmod-cache.html  11-workspace-monorepo-patterns.html  12-migrating-cmake-to-cmod.html  13-cmod-and-ai-assisted-development.html
website/css/: style.css
website/js/: main.js
