[workspace]
members = [
    "crates/cmod-cli",
    "crates/cmod-core",
    "crates/cmod-resolver",
    "crates/cmod-build",
    "crates/cmod-cache",
    "crates/cmod-workspace",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
semver = { version = "1", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
git2 = "0.20"
tempfile = "3"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
