[workspace]
members = [
    "crates/cmod-cli",
    "crates/cmod-core",
    "crates/cmod-resolver",
    "crates/cmod-build",
    "crates/cmod-cache",
    "crates/cmod-workspace",
    "crates/cmod-security",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["Satish Babariya"]
license = "Apache-2.0"
repository = "https://github.com/satishbabariya/cmod"
homepage = "https://github.com/satishbabariya/cmod"
keywords = ["cpp", "modules", "build-tool", "package-manager", "cpp20"]
categories = ["development-tools", "development-tools::build-utils", "command-line-utilities"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
semver = { version = "1", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
git2 = "0.20"
tempfile = "3"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
crossbeam-channel = "0.5"
glob = "0.3"
ureq = "3"
zstd = "0.13"
