[package]
name = "cmod-build"
description = "Module DAG construction and build orchestration for cmod"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cmod-core = { path = "../cmod-core" }
cmod-cache = { path = "../cmod-cache" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
walkdir = { workspace = true }
tempfile = { workspace = true }
crossbeam-channel = { workspace = true }
