[package]
name = "cmod-cli"
description = "CLI frontend for cmod — Cargo-inspired C++ module tooling"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "cmod"
path = "src/main.rs"

[dependencies]
cmod-core = { path = "../cmod-core" }
cmod-resolver = { path = "../cmod-resolver" }
cmod-build = { path = "../cmod-build" }
cmod-cache = { path = "../cmod-cache" }
cmod-workspace = { path = "../cmod-workspace" }
cmod-security = { path = "../cmod-security" }
cmod-lsp = { path = "../cmod-lsp" }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
walkdir = { workspace = true }
git2 = { workspace = true }
tempfile = { workspace = true }
dirs = { workspace = true }
crossbeam-channel = { workspace = true }
glob = { workspace = true }
wait-timeout = { workspace = true }

[dev-dependencies]
