[package]
name = "cmod-resolver"
version = "0.1.0"
edition = "2021"
description = "Git-based dependency resolution and lockfile management for cmod"

[dependencies]
cmod-core = { path = "../cmod-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
semver = { workspace = true }
git2 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
