[package]
name = "cmod-security"
version = "0.1.0"
edition = "2021"
description = "Security, trust, and supply-chain integrity for cmod"

[dependencies]
cmod-core = { path = "../cmod-core" }
cmod-cache = { path = "../cmod-cache" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
git2 = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
