[package]
name = "cmod-security"
description = "Security, trust, and supply-chain integrity for cmod"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cmod-core = { path = "../cmod-core" }
cmod-cache = { path = "../cmod-cache" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
git2 = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
