[package]
name = "cmod-workspace"
description = "Workspace and monorepo management for cmod"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cmod-core = { path = "../cmod-core" }
cmod-resolver = { path = "../cmod-resolver" }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
